Security to mailbox common config